# signal-persona

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: canonical.nota
schema/: lib.schema  signal-persona.concept.schema
src/: auth.rs  authorization.rs  binding.rs  deadline.rs  delivery.rs  error.rs  frame.rs  harness.rs  identity.rs  lib.rs  lock.rs  message.rs  observation.rs  origin.rs  reply.rs  request.rs  store.rs  stream.rs  system.rs  transition.rs  version.rs
src/schema/: lib.rs
tests/: canonical_examples.rs  engine_manager.rs  frame.rs  round_trip.rs  shim.rs  spawn_envelope.rs  version.rs
