[package]
name         = "signal-persona"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-persona"
description  = "Persona binary wire contract."
publish      = false

[lib]
name = "signal_persona"
path = "src/lib.rs"

[dependencies]
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-core = { git = "https://github.com/LiGoldragon/signal-core.git" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"
