[package]
name         = "signal-persona"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-persona"
description  = "Ordinary Persona working-signal contract for component lifecycle traffic."
publish      = false

[lib]
name = "signal_persona"
path = "src/lib.rs"

[features]
default = ["nota-text"]
nota-text = ["signal-frame/nota-text"]

[dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona-origin = { git = "https://github.com/LiGoldragon/signal-persona-origin.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"
