[package]
name         = "signal-persona"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-persona"
description  = "Ordinary Persona working-signal contract for component lifecycle traffic."
publish      = false
links        = "signal-persona"
build        = "build.rs"

[lib]
name = "signal_persona"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota", "signal-frame/nota-text"]

[dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"
